# soccer360

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  local-360-soccer-auto-tracking-server.md  pyproject.toml  requirements-docker.txt
configs/: model_config.yaml  pipeline.yaml
docs/: FUTURE_FEATURES.md  soccer-ai-server-setup.md
scripts/: build_dataset.sh  check_deps_sync.py  healthcheck.sh  install.sh  labelstudio_import.sh  smoke_dedupe_restart.sh  train.sh  train_ball.sh  verify_container_assets.sh
src/: __init__.py  active_learning.py  camera.py  cli.py  detector.py  exporter.py  hard_frames.py  highlights.py  pipeline.py  reframer.py  tracker.py  trainer.py  utils.py  watcher.py
tests/: conftest.py  test_active_learning.py  test_ball_stabilizer.py  test_bootstrap_detection.py  test_camera.py  test_detector.py  test_exporter.py  test_hard_frames.py  test_highlights.py  test_model_resolution.py  test_pipeline.py  test_reframer.py  test_tracker.py  test_watcher.py
